Enhance ORSRoutingProvider with logging and error checks 0909
Added logging for API key validation and response handling.