@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.pgsa.trailers.service.routing.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.annotation.Order;
 import org.springframework.http.*;
@@ -13,6 +14,7 @@ import org.springframework.web.client.RestTemplate;
 import java.math.BigDecimal;
 import java.util.Map;
 
+@Slf4j
 @Component
 @RequiredArgsConstructor
 @Order(1)
@@ -31,7 +33,11 @@ public class ORSRoutingProvider implements RoutingProvider {
 
     @Override
     public boolean supports(String vehicleType) {
-        return apiKey != null && !apiKey.isBlank();
+        if (apiKey == null || apiKey.isBlank()) {
+            log.warn("ORS API key not configured");
+            return false;
+        }
+        return true;
     }
 
     @Override
@@ -41,23 +47,20 @@ public class ORSRoutingProvider implements RoutingProvider {
                                    Map<String, Object> context) {
 
         try {
-            String url = "https://api.openrouteservice.org/v2/directions/driving-hgv";
+            // Use driving-car for all vehicles (ORS doesn't have truck-specific for free tier)
+            String url = "https://api.openrouteservice.org/v2/directions/driving-car";
 
-            String body = """
-            {
-              "coordinates": [
-                [%f, %f],
-                [%f, %f]
-              ]
-            }
-            """.formatted(
-                    origin.getLng(), origin.getLat(),
-                    destination.getLng(), destination.getLat()
+            String body = String.format(
+                "{\"coordinates\": [[%f, %f], [%f, %f]]}",
+                origin.getLng(), origin.getLat(),
+                destination.getLng(), destination.getLat()
             );
 
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_JSON);
             headers.set("Authorization", apiKey);
+
+            log.debug("Calling ORS API: {} -> {}", origin, destination);
 
             ResponseEntity<String> response = restTemplate.exchange(
                     url,
@@ -66,14 +69,29 @@ public class ORSRoutingProvider implements RoutingProvider {
                     String.class
             );
 
-            if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) {
-                throw new RuntimeException("ORS invalid response: " + response.getStatusCode());
+            if (!response.getStatusCode().is2xxSuccessful()) {
+                log.error("ORS API error: {}", response.getStatusCode());
+                throw new RuntimeException("ORS API returned: " + response.getStatusCode());
+            }
+
+            if (response.getBody() == null) {
+                throw new RuntimeException("ORS API returned empty response");
             }
 
             JsonNode root = objectMapper.readTree(response.getBody());
 
-            JsonNode segment = root.path("features")
-                    .path(0)
+            // Check for API error response
+            if (root.has("error")) {
+                String error = root.path("error").asText();
+                throw new RuntimeException("ORS API error: " + error);
+            }
+
+            JsonNode features = root.path("features");
+            if (!features.isArray() || features.isEmpty()) {
+                throw new RuntimeException("ORS returned no features");
+            }
+
+            JsonNode segment = features.path(0)
                     .path("properties")
                     .path("segments")
                     .path(0);
@@ -85,10 +103,16 @@ public class ORSRoutingProvider implements RoutingProvider {
             double meters = segment.path("distance").asDouble();
             double seconds = segment.path("duration").asDouble();
 
-            String geometry = root.path("features")
-                    .path(0)
+            if (meters <= 0 || seconds <= 0) {
+                throw new RuntimeException("ORS returned invalid distance/duration");
+            }
+
+            String geometry = features.path(0)
                     .path("geometry")
                     .asText(null);
+
+            log.info("✅ ORS route calculated: {} km, {} hours", 
+                meters / 1000.0, seconds / 3600.0);
 
             return new RoutingResult(
                     origin,
@@ -100,7 +124,8 @@ public class ORSRoutingProvider implements RoutingProvider {
             );
 
         } catch (Exception e) {
-            throw new RuntimeException("ORS routing failed", e);
+            log.error("ORS routing failed: {}", e.getMessage());
+            throw new RuntimeException("ORS routing failed: " + e.getMessage(), e);
         }
     }
 }
